[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
futures-channel = "0.3"
tokio-tungstenite = "0.18.0"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mio = "0.8"
uuid = { version = "1.3.2", features = ["v4"] }
ws = "0.9.2"
once_cell = "1.17.1"
