[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
tungstenite = "0.20.1"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.2", features = ["v4"] }
